# SketchDDD

./: Cargo.toml  LICENSE  README.md  deny.toml  index.html  mkdocs.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
crates/sketchddd-cli/: Cargo.toml  README.md
crates/sketchddd-cli/src/: main.rs
crates/sketchddd-cli/tests/: cli_tests.rs
crates/sketchddd-codegen/: README.md
crates/sketchddd-codegen/src/: java.rs  kotlin.rs  python.rs
crates/sketchddd-core/: Cargo.toml  README.md
crates/sketchddd-core/src/: diagnostics.rs  lib.rs  validation.rs
crates/sketchddd-lsp/: Cargo.toml
crates/sketchddd-lsp/src/: backend.rs  capabilities.rs  completion.rs  diagnostics.rs  document.rs  hover.rs  main.rs  semantic_tokens.rs  symbols.rs
crates/sketchddd-parser/: README.md
crates/sketchddd-parser/src/: ast.rs  grammar.pest  lib.rs
crates/sketchddd-viz/: README.md
crates/sketchddd-wasm/: Cargo.toml  README.md
crates/sketchddd-wasm/src/: lib.rs
docs/: SPECIFICATION.md  index.md
docs/adr/: 0006-dsl-syntax-design.md  0007-file-extension-convention.md  0008-code-generation-architecture.md  0010-wasm-api-design.md  README.md
docs/architecture/: decisions.md  overview.md
docs/cli/: codegen.md  commands.md  overview.md  templates.md  visualization.md
docs/codegen/: clojure.md  haskell.md  java.md  kotlin.md  overview.md  python.md  rust.md  typescript.md
docs/getting-started/: first-model.md  installation.md  quick-start.md
docs/language/: aggregates.md  context-maps.md  contexts.md  entities-values.md  enums.md  expressions.md  morphisms.md  overview.md
docs/reference/: errors.md  specification.md  types.md
docs/theory/: functors.md  limits-colimits.md  overview.md  sketches.md
docs/wasm/: api.md  overview.md
editors/: README.md
editors/sublime/: README.md  SketchDDD.sublime-syntax
editors/vim/: README.md
editors/vim/ftdetect/: sketchddd.vim
editors/vim/indent/: sketchddd.vim
editors/vim/syntax/: sketchddd.vim
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode/snippets/: sketchddd.json
editors/vscode/syntaxes/: sketchddd.tmLanguage.json
web/: README.md  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/canvas/: Canvas.tsx
web/src/components/layout/: Header.tsx  Sidebar.tsx
web/src/components/nodes/: AggregateNode.tsx  EntityNode.tsx  EnumNode.tsx  ValueNode.tsx  index.ts
web/src/components/palette/: BuildingBlocks.tsx  Palette.tsx  index.ts
web/src/components/panels/: PropertiesPanel.tsx
web/src/components/templates/: TemplateBrowser.tsx  index.ts
web/src/components/validation/: ValidationPanel.tsx  index.ts  validationRules.ts
web/src/stores/: domainStore.ts  index.ts
web/src/templates/: banking.ts  ecommerce.ts  healthcare.ts  index.ts  inventory.ts  project-management.ts  types.ts
web/src/types/: domain.ts
