[workspace]
resolver = "2"
members = [
    "crates/sketchddd",
    "crates/sketchddd-core",
    "crates/sketchddd-parser",
    "crates/sketchddd-codegen",
    "crates/sketchddd-viz",
    "crates/sketchddd-wasm",
    "crates/sketchddd-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ibrahim Cesar <ibrahim@ibrahimcesar.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ibrahimcesar/SketchDDD"
homepage = "https://sketchddd.dev"
documentation = "https://docs.sketchddd.dev"
readme = "README.md"
keywords = ["ddd", "domain-driven-design", "category-theory", "modeling"]
categories = ["development-tools", "visualization"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Parser
pest = "2.7"
pest_derive = "2.7"

# Diagnostics
ariadne = "0.4"
strsim = "0.11"

# CLI
clap = { version = "4", features = ["derive"] }
colored = "2"

# WASM
wasm-bindgen = "0.2"

# Testing
pretty_assertions = "1.4"
