[package]
name = "sketchddd-lsp"
description = "Language Server Protocol implementation for SketchDDD"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sketchddd-lsp"
path = "src/main.rs"

[dependencies]
sketchddd-core = { version = "0.1.0", path = "../sketchddd-core" }
sketchddd-parser = { version = "0.1.0", path = "../sketchddd-parser" }

# LSP dependencies
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dashmap = "5.5"
ropey = "1.6"
