[package]
name = "sketchddd-wasm"
description = "WebAssembly bindings for SketchDDD"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
sketchddd-core = { version = "0.1.0", path = "../sketchddd-core" }
sketchddd-parser = { version = "0.1.0", path = "../sketchddd-parser" }
sketchddd-codegen = { version = "0.1.0", path = "../sketchddd-codegen" }
sketchddd-viz = { version = "0.1.0", path = "../sketchddd-viz" }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { workspace = true }

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
